# Luogu-record

./: .gitignore  CMakeLists.txt
src/Part 1 入门阶段/Part 1.1 从零开始/: P1014 [NOIP1999 普及组] Cantor 表.cpp  P1035 [NOIP2002 普及组] 级数求和.cpp  P1085 [NOIP2004 普及组] 不高兴的津津.cpp  P1089 [NOIP2004 提高组] 津津的储蓄计划.cpp  P1307 [NOIP2011 普及组] 数字反转.cpp  P1421 小玉买文具.cpp  P1909 [NOIP2016 普及组] 买铅笔.cpp  P1980 [NOIP2013 普及组] 计数问题.cpp
src/Part 1 入门阶段/Part 1.2 数组基础/: P1046 [NOIP2005 普及组] 陶陶摘苹果.cpp  P1047 [NOIP2005 普及组] 校门外的树.cpp  P1427 小鱼的数字游戏.cpp  P2141 [NOIP2014 普及组] 珠心算测验.cpp  P5594 【XR-4】模拟赛.cpp
src/Part 1 入门阶段/Part 1.3 字符串基础/: P1012 [NOIP1998 提高组] 拼数.cpp  P1055 [NOIP2008 普及组] ISBN 号码.cpp  P1308 [NOIP2011 普及组] 统计单词数.cpp  P2010 [NOIP2016 普及组] 回文日期.cpp  P5015 [NOIP2018 普及组] 标题统计.cpp  P5587 打字练习.cpp
src/Part 2 基础算法/Part 2.8 前缀和 & 差分/: P3131 [USACO16JAN] Subsequences Summing to Sevens S.cpp
