cmake_minimum_required(VERSION 3.0)
project(Luogu)

set(CMAKE_CXX_STANDARD 20)

add_executable(P1421 "src/Part 1 入门阶段/Part 1.1 从零开始/P1421 小玉买文具.cpp")
add_executable(P1909 "src/Part 1 入门阶段/Part 1.1 从零开始/P1909 [NOIP2016 普及组] 买铅笔.cpp")
add_executable(P1089 "src/Part 1 入门阶段/Part 1.1 从零开始/P1089 [NOIP2004 提高组] 津津的储蓄计划.cpp")
add_executable(P1085 "src/Part 1 入门阶段/Part 1.1 从零开始/P1085 [NOIP2004 普及组] 不高兴的津津.cpp")
add_executable(P1035 "src/Part 1 入门阶段/Part 1.1 从零开始/P1035 [NOIP2002 普及组] 级数求和.cpp")
add_executable(P1980 "src/Part 1 入门阶段/Part 1.1 从零开始/P1980 [NOIP2013 普及组] 计数问题.cpp")
add_executable(P1014 "src/Part 1 入门阶段/Part 1.1 从零开始/P1014 [NOIP1999 普及组] Cantor 表.cpp")
add_executable(P1307 "src/Part 1 入门阶段/Part 1.1 从零开始/P1307 [NOIP2011 普及组] 数字反转.cpp")

add_executable(P1046 "src/Part 1 入门阶段/Part 1.2 数组基础/P1046 [NOIP2005 普及组] 陶陶摘苹果.cpp")
add_executable(P1047 "src/Part 1 入门阶段/Part 1.2 数组基础/P1047 [NOIP2005 普及组] 校门外的树.cpp")
add_executable(P1427 "src/Part 1 入门阶段/Part 1.2 数组基础/P1427 小鱼的数字游戏.cpp")
add_executable(P2141 "src/Part 1 入门阶段/Part 1.2 数组基础/P2141 [NOIP2014 普及组] 珠心算测验.cpp")
add_executable(P5594 "src/Part 1 入门阶段/Part 1.2 数组基础/P5594 【XR-4】模拟赛.cpp")

add_executable(P5015 "src/Part 1 入门阶段/Part 1.3 字符串基础/P5015 [NOIP2018 普及组] 标题统计.cpp")
add_executable(P1055 "src/Part 1 入门阶段/Part 1.3 字符串基础/P1055 [NOIP2008 普及组] ISBN 号码.cpp")
add_executable(P1308 "src/Part 1 入门阶段/Part 1.3 字符串基础/P1308 [NOIP2011 普及组] 统计单词数.cpp")
